fix bug in swipers

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
   <main>
     <section class="hero">
-      <div class="swiper-container hero-swiper">
+      <div class="swiper hero-swiper">
         <div class="swiper-wrapper hero-swiper-wrapper">
           <div class="swiper-slide hero-swiper__slide swiper-slide_1"></div>
           <div class="swiper-slide hero-swiper__slide swiper-slide_2"></div>
@@ -278,7 +278,7 @@
             воспользуйтесь лицензией.
           </p>
         </div>
-        <div class="swiper-container gallery-swiper">
+        <div class="swiper gallery-swiper">
           <div class="gallery-swiper__nav">
             <div class="swiper-button-prev gallery-swiper__button button_prev"></div>
             <div class="swiper-pagination gallery-swiper__pagination"></div>
@@ -5264,7 +5264,7 @@
     </section>
 
     <section class="events">
-      <div class="container events-container swiper-container events-swiper">
+      <div class="container events-container swiper events-swiper">
         <h2 class="events-title section-title">События</h2>
         <ul class="events-list list-reset swiper-wrapper">
           <li class="events-item swiper-slide">
@@ -5505,7 +5505,7 @@
           </div>
         </div>
 
-        <div class="editions-swiper swiper-container">
+        <div class="editions-swiper swiper">
           <div class="gallery-swiper__nav">
             <div class="swiper-button-prev gallery-swiper__button button_prev"></div>
             <div class="swiper-pagination gallery-swiper__pagination"></div>
@@ -5642,7 +5642,7 @@
         <div class="projects-swiper">
           <div class="swiper-button-prev projects-swiper__btn projects-swiper__btn_prev"></div>
           <div class="swiper-button-next projects-swiper__btn projects-swiper__btn_next"></div>
-          <div class="projects-swiper-container swiper-container">
+          <div class="projects-swiper-container swiper">
             <ul class="projects-swiper__list swiper-wrapper list-reset">
               <li class="projects-swiper__item swiper-slide">
                 <img src="img/partner1.png" alt="Freeland Foundation" class="projects-swiper__img" />
