add anchor links in header

--- a/index.html
+++ b/index.html
@@ -51,25 +51,25 @@
           </button>
           <ul class="header-nav__list list-reset">
             <li class="header-nav__item">
-              <a href="#" class="header-nav__link">О нас</a>
+              <a href="#aboutUs" class="header-nav__link">О нас</a>
             </li>
             <li class="header-nav__item">
-              <a href="#" class="header-nav__link">Галерея</a>
+              <a href="#gallery" class="header-nav__link">Галерея</a>
             </li>
             <li class="header-nav__item">
-              <a href="#" class="header-nav__link">Каталог</a>
+              <a href="#catalog" class="header-nav__link">Каталог</a>
             </li>
             <li class="header-nav__item">
-              <a href="#" class="header-nav__link">События</a>
+              <a href="#events" class="header-nav__link">События</a>
             </li>
             <li class="header-nav__item">
-              <a href="#" class="header-nav__link">Издания</a>
+              <a href="#editions" class="header-nav__link">Издания</a>
             </li>
             <li class="header-nav__item">
-              <a href="#" class="header-nav__link">Проекты</a>
+              <a href="#projects" class="header-nav__link">Проекты</a>
             </li>
             <li class="header-nav__item">
-              <a href="#" class="header-nav__link">Контакты</a>
+              <a href="#contacts" class="header-nav__link">Контакты</a>
             </li>
           </ul>
 
@@ -231,7 +231,7 @@
       </div>
     </section>
 
-    <section class="about">
+    <section id="aboutUs" class="about">
       <div class="container about-container">
         <h2 class="about-title section-title">О нас</h2>
         <p class="about-description section-description">
@@ -251,7 +251,7 @@
       </div>
     </section>
 
-    <section class="gallery">
+    <section id="gallery" class="gallery">
       <div class="container gallery-container">
         <div class="gallery-left">
           <div>
@@ -593,7 +593,7 @@
       </div>
     </section>
 
-    <section class="catalog">
+    <section id="catalog" class="catalog">
       <div class="container catalog-container">
         <div class="catalog-nav">
           <h2 class="catalog-title section-title">Каталог</h2>
@@ -5263,7 +5263,7 @@
       </div>
     </section>
 
-    <section class="events">
+    <section id="events" class="events">
       <div class="container events-container swiper events-swiper">
         <h2 class="events-title section-title">События</h2>
         <ul class="events-list list-reset swiper-wrapper">
@@ -5391,7 +5391,7 @@
       </div>
     </section>
 
-    <section class="editions">
+    <section id="editions" class="editions">
       <div class="container editions-container">
         <div class="editions-left">
           <div>
@@ -5601,7 +5601,7 @@
       </div>
     </section>
 
-    <section class="projects">
+    <section id="projects" class="projects">
       <div class="container projects-container">
         <h2 class="projects-title section-title">Проекты</h2>
         <div class="projects-description">
@@ -5679,7 +5679,7 @@
       </div>
     </section>
 
-    <section class="contacts">
+    <section id="contacts" class="contacts">
       <div class="container contacts-container">
         <h2 class="contacts-title section-title">Контакты</h2>
       </div>
